--- a/requirements.txt
+++ b/requirements.txt
@@ -99,4 +99,8 @@ whitenoise==6.11.0
 zstandard==0.23.0
 dj-database-url
 psycopg[binary]==3.3.2
+psycopg2-binary>=2.9
+dj-database-url>=2.2
+whitenoise>=6.6
+gunicorn>=21
 
